tests/src/frontend/typechecking/invalid/pattern_match_constraints2.sk
class C1()
class C2()
base class Bar<+T>
class Foo() extends Bar<C2>

fun shouldFail<T: C1>(x: Bar<T>): void {
  x match {
  | Foo() -> void
  }
}
